# koombea-test

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: consumer.py  event.py  routes.py  schemas.py  sender.py
consumer/: Dockerfile  consumer.py  main.py  requirements.txt
tests/: test_event.py
