[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["betinacosta <bmcosta13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
